[gd_scene load_steps=9 format=2]

[ext_resource path="res://acep spriteframe.tres" type="SpriteFrames" id=1]
[ext_resource path="res://A cept.gd" type="Script" id=2]
[ext_resource path="res://Asset/sound effect/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Asset/sound effect/player_get_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Asset/sound effect/dagger.wav" type="AudioStream" id=5]
[ext_resource path="res://Asset/sound effect/player_fall.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.4185
height = 28.717

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.1196

[node name="A cept" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "Serang"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 20, 5 )

[node name="SuaraLompat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SuaraLuka" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="SuaraPedang" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="SuaraJatuh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
